--- a/Amazon_Reviews_ETL.ipynb
+++ b/Amazon_Reviews_ETL.ipynb
@@ -553,13 +553,194 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Exuo6ebUsCqW"
+        "id": "Exuo6ebUsCqW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73df7ba4-3e7f-4f45-f7a4-964fbb968c74"
       },
       "source": [
-        ""
+        "review_id_df.show()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------+-----------+----------+--------------+-----------+\n",
+            "|     review_id|customer_id|product_id|product_parent|review_date|\n",
+            "+--------------+-----------+----------+--------------+-----------+\n",
+            "|R26MV8D0KG6QI6|   42521656|B000SAQCWC|     159713740| 2015-08-31|\n",
+            "|R1OF8GP57AQ1A0|   12049833|B00509LVIQ|     138680402| 2015-08-31|\n",
+            "|R3VDC1QB6MC4ZZ|     107642|B00KHXESLC|     252021703| 2015-08-31|\n",
+            "|R12FA3DCF8F9ER|    6042304|B000F8JIIC|     752728342| 2015-08-31|\n",
+            "| RTWHVNV6X4CNJ|   18123821|B004ZWR9RQ|     552138758| 2015-08-31|\n",
+            "| RIG9AWFOGRDVO|   23649464|B00AL6QBZ6|     681475449| 2015-08-31|\n",
+            "|R1S1XSG4ZCHDGS|   32778285|B00BCNSTRA|     578681693| 2015-08-31|\n",
+            "| RB15NBVY5ELVW|   46612941|B0089MM2BG|     350968436| 2015-08-31|\n",
+            "| R56358YM1ZJ7I|   31525399|B00Y1C9770|     729982780| 2015-08-31|\n",
+            "|R1ODXB3C9UP3NL|   19624355|B00J074W94|       2499702| 2015-08-31|\n",
+            "|R155ZMVLD5C9BP|   31910375|B0001VKKOO|     189938205| 2015-08-31|\n",
+            "|R2IXW43PUNYM0G|   12816533|B007TGH4CK|     398128262| 2015-08-31|\n",
+            "|R3LYEG1QCK2BG0|   23208852|B002HMN6SC|      18057786| 2015-08-31|\n",
+            "|R20LREICPM3YH0|   17348415|B004NRHAZO|     595020880| 2015-08-31|\n",
+            "| RHA5COCZDVB13|   46763945|B00V7LJIG8|     173088090| 2015-08-31|\n",
+            "| RT9BGRQANMANE|     961747|B0000E2YFI|     120269621| 2015-08-31|\n",
+            "| ROD1TU5JCS7JQ|   16888081|B00VK5SQOQ|     204992966| 2015-08-31|\n",
+            "|R3T6TTD2IN0EFZ|   22765168|B00XDXMLL2|     971154239| 2015-08-31|\n",
+            "|R1OCUGZ444NKV3|   36328996|B00MN4KX3A|     787182505| 2015-08-31|\n",
+            "| RCQQGWTC4J4TZ|   27092724|B004NTCE1M|     653570135| 2015-08-31|\n",
+            "+--------------+-----------+----------+--------------+-----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "products_df.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R-lR1iJrx_2J",
+        "outputId": "b9e1dfa6-4fa4-4efe-fca6-422c52c8c401"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+--------------------+\n",
+            "|product_id|       product_title|\n",
+            "+----------+--------------------+\n",
+            "|B0000CDBQB|Chef Paul Seasoni...|\n",
+            "|B0000CE2OA|Cashew Butter, Sm...|\n",
+            "|B0000D1699|          Pu-Erh Tea|\n",
+            "|B0000D17G4| Polish Dill Pickles|\n",
+            "|B0000D17HO|              Trenne|\n",
+            "|B0000D89E8|Helen Grace Choco...|\n",
+            "|B0000D94PL|Sweet 'N Low Whit...|\n",
+            "|B0000D9N78|Saffron from Spai...|\n",
+            "|B0000DC3QJ|Angel Falls Mist ...|\n",
+            "|B0000DG4MH|Mr. Hogg's Hogg W...|\n",
+            "|B0000DG4MV|Potatoes, Dehydra...|\n",
+            "|B0000DG6XY|Mt. Sterling Raw ...|\n",
+            "|B0000DIGP0|One Dozen Long St...|\n",
+            "|B0000DJ6NI|Tootsie Pops-Asso...|\n",
+            "|B0000DJDK2|Sante Fe Farms Fa...|\n",
+            "|B0000GIORA|Bijol Annatto, .5...|\n",
+            "|B0000SWIPM|Butter Roasted an...|\n",
+            "|B0000TL6A4|Melissa's Pickled...|\n",
+            "|B0000TL6EK|Melissa's Fresh C...|\n",
+            "|B0000TLERY|Wild Huckleberry ...|\n",
+            "+----------+--------------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "customers_df.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "noC__85MyAIf",
+        "outputId": "1ba60665-6afc-4bea-b136-ea9411dea7fc"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------+--------------+\n",
+            "|customer_id|customer_count|\n",
+            "+-----------+--------------+\n",
+            "|   21294263|             1|\n",
+            "|    8619125|             1|\n",
+            "|   43626894|             1|\n",
+            "|   38209321|             4|\n",
+            "|   40568205|             1|\n",
+            "|   13480593|             1|\n",
+            "|   19505799|             1|\n",
+            "|   43150161|             2|\n",
+            "|   28802315|             2|\n",
+            "|   35329257|             1|\n",
+            "|   49101505|             1|\n",
+            "|    1117644|             1|\n",
+            "|   28377689|             1|\n",
+            "|   23493243|             1|\n",
+            "|   48670265|             1|\n",
+            "|   49041516|             3|\n",
+            "|   37499049|             2|\n",
+            "|   10920752|             1|\n",
+            "|    5627998|             1|\n",
+            "|     135423|             1|\n",
+            "+-----------+--------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vine_df.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SFa5CZTvyAV_",
+        "outputId": "ad34f9f3-16a6-49aa-9a21-5f33aaddf9e4"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "|     review_id|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "|R26MV8D0KG6QI6|          5|            0|          0|   N|                Y|\n",
+            "|R1OF8GP57AQ1A0|          5|            0|          0|   N|                Y|\n",
+            "|R3VDC1QB6MC4ZZ|          5|            0|          0|   N|                N|\n",
+            "|R12FA3DCF8F9ER|          5|            0|          0|   N|                Y|\n",
+            "| RTWHVNV6X4CNJ|          5|            0|          0|   N|                Y|\n",
+            "| RIG9AWFOGRDVO|          2|            1|          1|   N|                Y|\n",
+            "|R1S1XSG4ZCHDGS|          5|            1|          1|   N|                Y|\n",
+            "| RB15NBVY5ELVW|          5|            2|          2|   N|                Y|\n",
+            "| R56358YM1ZJ7I|          5|            0|          0|   N|                N|\n",
+            "|R1ODXB3C9UP3NL|          1|            1|          3|   N|                N|\n",
+            "|R155ZMVLD5C9BP|          4|            3|          4|   N|                Y|\n",
+            "|R2IXW43PUNYM0G|          4|            1|          1|   N|                Y|\n",
+            "|R3LYEG1QCK2BG0|          5|            0|          0|   N|                Y|\n",
+            "|R20LREICPM3YH0|          5|            0|          0|   N|                Y|\n",
+            "| RHA5COCZDVB13|          5|            0|          0|   N|                Y|\n",
+            "| RT9BGRQANMANE|          5|            0|          0|   N|                Y|\n",
+            "| ROD1TU5JCS7JQ|          5|            0|          0|   N|                N|\n",
+            "|R3T6TTD2IN0EFZ|          1|            4|          4|   N|                N|\n",
+            "|R1OCUGZ444NKV3|          5|            5|          5|   N|                Y|\n",
+            "| RCQQGWTC4J4TZ|          4|            0|          0|   N|                Y|\n",
+            "+--------------+-----------+-------------+-----------+----+-----------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
